# travel-planner

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt  server.py  server_simple.py  server_solid.py  setup.cfg  sonar-project.properties  test_server.py
.github/workflows/: ci.yml
core/: __init__.py  interfaces.py  registry.py  services.py
docs/: API.md  DEVELOPMENT.md  SOLID_ARCHITECTURE.md
examples/: sample_interactions.py
reports/: analysis-summary.html  analysis-summary.json  bandit-report.json  bandit-report.txt  flake8-report.txt  mypy-report.txt  pylint-report.txt
resources/travel_guides/: austin.json  new_york.json  san_francisco.json
scripts/: run_analysis.py
services/: __init__.py  hotel_service.py
tests/: __init__.py  conftest.py  test_core_services.py  test_generate_itinerary.py  test_integration.py  test_search_cars.py  test_search_flights.py  test_search_hotels.py  test_search_trains.py  test_server.py  test_simple.py
tools/: __init__.py  generate_itinerary.py  search_cars.py  search_flights.py  search_hotels.py  search_trains.py
tools_solid/: __init__.py  hotel_tool.py
